
- bug with PHP 4 : PDO::FETCH_ASSOC
- bug: A string [] appears in the contents when parameter "att" is used with a "parentgrp" block.
- new property ->VarRef
- 

